@@ -239,7 +239,7 @@ public class CheckListConfigurationController extends FormBasicController {
 
 		//due date
 		boolean closeAfterDueDate = dueDateEl.isAtLeastSelected(1);
-		config.set(CheckListCourseNode.CONFIG_KEY_CLOSE_AFTER_DUE_DATE, new Boolean(closeAfterDueDate));
+		config.set(CheckListCourseNode.CONFIG_KEY_CLOSE_AFTER_DUE_DATE, Boolean.valueOf(closeAfterDueDate));
 		Date dueDate = dueDateChooserEl.getDate();
 		if(dueDate != null) {
 			config.set(CheckListCourseNode.CONFIG_KEY_DUE_DATE, dueDate);
@@ -247,7 +247,7 @@ public class CheckListConfigurationController extends FormBasicController {
 			config.remove(CheckListCourseNode.CONFIG_KEY_DUE_DATE);
 		}
 		//score
-		Boolean sf = new Boolean(scoreGrantedEl.isSelected(0));
+		Boolean sf = Boolean.valueOf(scoreGrantedEl.isSelected(0));
 		config.set(MSCourseNode.CONFIG_KEY_HAS_SCORE_FIELD, sf);
 		if (sf.booleanValue()) {
 			config.set(MSCourseNode.CONFIG_KEY_SCORE_MIN, new Float(minPointsEl.getValue()));
@@ -258,7 +258,7 @@ public class CheckListConfigurationController extends FormBasicController {
 		}
 		
 		// mandatory passed flag
-		Boolean pf = new Boolean(passedEl.isSelected(0));
+		Boolean pf = Boolean.valueOf(passedEl.isSelected(0));
 		config.set(MSCourseNode.CONFIG_KEY_HAS_PASSED_FIELD, pf);
 		config.remove(MSCourseNode.CONFIG_KEY_PASSED_CUT_VALUE);
 		config.remove(CheckListCourseNode.CONFIG_KEY_PASSED_SUM_CUTVALUE);
@@ -271,16 +271,16 @@ public class CheckListConfigurationController extends FormBasicController {
 			} else if("sum".equals(output)) {
 				config.set(CheckListCourseNode.CONFIG_KEY_PASSED_SUM_CHECKBOX, Boolean.TRUE);
 				int sumCutValue = Integer.parseInt(sumCheckboxEl.getSelectedKey());
-				config.set(CheckListCourseNode.CONFIG_KEY_PASSED_SUM_CUTVALUE, new Integer(sumCutValue));
+				config.set(CheckListCourseNode.CONFIG_KEY_PASSED_SUM_CUTVALUE, Integer.valueOf(sumCutValue));
 			} else if("coach".equals(output)) {
 				config.set(CheckListCourseNode.CONFIG_KEY_PASSED_MANUAL_CORRECTION, Boolean.TRUE);
 			}
 		}
 
 		// mandatory comment flag
-		config.set(MSCourseNode.CONFIG_KEY_HAS_COMMENT_FIELD, new Boolean(commentEl.isSelected(0)));
+		config.set(MSCourseNode.CONFIG_KEY_HAS_COMMENT_FIELD, Boolean.valueOf(commentEl.isSelected(0)));
 		// individual assessment docs
-		config.setBooleanEntry(MSCourseNode.CONFIG_KEY_HAS_INDIVIDUAL_ASSESSMENT_DOCS, new Boolean(assessmentDocsEl.isSelected(0)));
+		config.setBooleanEntry(MSCourseNode.CONFIG_KEY_HAS_INDIVIDUAL_ASSESSMENT_DOCS, assessmentDocsEl.isSelected(0));
 
 		// set info text only if something is in there
 		String iu = tipUserEl.getValue();
@@ -300,7 +300,7 @@ public class CheckListConfigurationController extends FormBasicController {
 
 	@Override
 	protected boolean validateFormLogic(UserRequest ureq) {
-		boolean allOk = true;
+		boolean allOk = super.validateFormLogic(ureq);
 		
 		//wizardery need title prefix and number of checklist to be defined
 		if(wizard) {
@@ -362,7 +362,7 @@ public class CheckListConfigurationController extends FormBasicController {
 			}
 		}
 		
-		return allOk & super.validateFormLogic(ureq);
+		return allOk;
 	}
 	
 	private float toFloat(String val) {
